--- a/views/quizz/create.ejs
+++ b/views/quizz/create.ejs
@@ -38,7 +38,7 @@
             </div>
         </div>
 
-        <button id='btn_Add_Question' class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
+        <button id='btn_Add_Question' type="button" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored">
             <i class="material-icons">add</i>
         </button>
 
@@ -47,5 +47,5 @@
         </button>
     </form>
 
-    <script src="/main.js"></script>
+    <script src="/script/main.js"></script>
     <%- include('../_footer'); -%>
