--- a/public/css/form.css
+++ b/public/css/form.css
@@ -51,13 +51,9 @@
 }
 
 .demo-list-three li {
-    /*display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;*/
-    background-color: #999999;
-    color: #eeeeee;
-    border-radius: 30px;
+    background-color: #dddddd;
+    color: #444444;
+    border-radius: 10px;
     margin: 10px;
     height: 300px;
     overflow: auto;
@@ -70,25 +66,22 @@
     flex-direction: column;
     justify-content: space-between;
     align-self: center;
-    height: 200px;
+    height: 250px;
     width: 100%;
 }
 
 #id_div_li {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
-    align-items: baseline;
+    justify-content: space-between;
+    align-items: center;
 }
 
-.btn-field-show {
-    /*display: flex;
-    flex-direction: row;
-    align-items: baseline;
-    justify-content: space-between;*/
+.div_table_show{
+    display: flex;
+    flex-wrap: wrap;
+    overflow: auto;   
 }
-
-
 .btn-field-show button {
     width: 30 px;
     margin: 5px;
@@ -110,20 +103,6 @@
     width: 100%;
 }
 
-
-/*.question{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-around;
-}
-
-.Answer{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-around;
-}*/
 
 #begin_Quizz{
     display:none;
