--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -11,6 +11,7 @@
       <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 
       <link rel="stylesheet" type="text/css" href="/css/form.css" />
-
+      <link rel="stylesheet" type="text/css" href="/css/home.css" />
+      <link rel="stylesheet" type="text/css" href="/css/run.css" />
     </head>
     <body>
